<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedback_llay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_content_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/feedback_content_edit"
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1.0"
        android:background="@drawable/setting_edit"
        android:gravity="top"
        android:hint="@string/feedback_content_hint"
        android:paddingBottom="12.0dp"
        android:paddingLeft="12.0dp"
        android:paddingTop="12.0dp"
        android:singleLine="false"
        android:textColor="#ff333333"
        android:textSize="18.0sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_contact_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/feedback_contact_edit"
        android:layout_width="match_parent"
        android:layout_height="48.0dp"
        android:layout_marginTop="10.0dp"
        android:background="@drawable/setting_edit"
        android:gravity="center_vertical"
        android:hint="@string/feedback_contact_hint"
        android:paddingLeft="12.0dp"
        android:paddingRight="12.0dp"
        android:singleLine="true"
        android:textColor="#ff333333"
        android:textSize="18.0sp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dp"
        android:layout_marginTop="10.0dp"
        android:background="@drawable/my_feedback_button"
        android:padding="10.0dp"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="18.0sp" />

</LinearLayout>