<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/remind_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/vaccination_remind"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/setting_notify_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_off"
        android:contentDescription="@string/open" />

    <TextView
        android:id="@+id/remind_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/remind_lable"
        android:layout_below="@+id/setting_notify_turn"
        android:layout_marginTop="50dp"
        android:text="@string/vaccination_remind_time" />

    <Button
        android:id="@+id/vaccination_before_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/remind_time"
        android:layout_alignBottom="@id/remind_time"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/vaccination_before_one_day" />

</RelativeLayout>