<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scr_bg3"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/vac_list_iv_babyImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/vac_list_temperature"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/image_content"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/vac_list_tv_babyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/vac_list_iv_babyImg"
            android:layout_toRightOf="@+id/vac_list_iv_babyImg"
            android:text="@string/image_content" />

        <ImageView
            android:id="@+id/vac_list_iv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/vac_list_tv_babyName"
            android:layout_toLeftOf="@+id/btn_load_weather"
            android:contentDescription="@string/image_content"
            android:src="@drawable/sun" />

        <Button
            android:id="@+id/btn_load_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/vac_list_iv_weather"
            android:text="@string/load_next_weather" />

        <Button
            android:id="@+id/vaccine_btn_next_vaccination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/vac_list_temperature"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/vac_list_tv_babyAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/vac_list_iv_babyImg"
            android:layout_alignLeft="@+id/vac_list_tv_babyName"
            android:text="@string/moon_age" />

        <TextView
            android:id="@+id/vac_list_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:layout_toLeftOf="@+id/btn_load_weather"
            android:text="@string/main_temperature" />
    </RelativeLayout>

    <ListView
        android:id="@+id/vaccine_list_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>